app/assets/stylesheets/pages/_book_show.scss
.benefits-of-reading h2 {
  @include browser-width-bar($sch2-light-blue);
}
.what-you-learn {
  h2 {
    @include browser-width-bar($sch3-orange);
  }
  li {
    text-align: justify;
    @include media($tablet) {
      text-align: left;
    }
    margin-bottom: $large-spacing;
  }
}
.peek-inside h2 {
  @include browser-width-bar($sch3-navy);
  color: white;
}
.fa-book {
  color: $sch1-orange;
}
.book__format {
  @include span-columns(4 of 12);
  font-weight: bold;
  @include media($tablet) {
    @include span-columns(12 of 12);
    p {
      margin: $base-spacing;
      text-align: center;
    }
    img {
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
  }
}
.who-should-read-this h2, .pleasantly-typeset h2 {
  @include browser-width-bar($sch3-lightened-navy);
  color: white;
}
.pleasantly-typeset {
  img {
    box-shadow: 5px 5px 30px;
  }
}
.about-author h2 {
  @include browser-width-bar($sch1-darkened-green);
  color: white;
}
.objections h2, .these-companies h2 {
  @include browser-width-bar($medium-gray);
}
.testimonials h2 {
  @include browser-width-bar($sch1-grayed-green);
}
.testimonials p:last-of-type {
  margin-bottom: -$base-spacing;
}
.testimonial {
  @include span-columns(12);
  margin-top: $base-spacing;
  margin-bottom: $base-spacing;
  .testimonial-img {
    @include span-columns(3 of 12);
  }
  img {
    margin-top: $small-spacing;
  }
  p {
    @include span-columns(9 of 12);
  }
}
.faq h2, .buy-it-now h2 {
  @include browser-width-bar($sch2-orange);
}

.about-author__social-media-icons {
  @include media($small-laptop) {
    right: 0px;
  }
  @include media($tablet) {
    position: inherit;
    text-align: center;
    margin-bottom: 0px;
  }
}

.book-image {
  @include span-columns(5);
  @include media($tablet) {
    @include span-columns(12 of 12);
  }
  img {
    box-shadow: 0px 5px 5px 3px $readable-gray;
    @include media($tablet) {
      display: block;
      margin: $base-spacing auto;
    }
  }
}
.book__description {
  @include span-columns(7);
  @include omega();
  @include media($tablet) {
    @include span-columns(12 of 12);
  }
}
.book__call-to-action-container {
  width: 80%;
  margin-right: auto;
  @include media($tablet) {
    margin-left: auto;
  }
  padding-left: $large-spacing;
  padding-top: $large-spacing;
  background: tint($light-gray, 30%);
  box-shadow: 0 8px 6px 0px $readable-gray;

  input {
    white-space: normal;
    margin-bottom: $small-spacing;
  }

  ul {
    margin-top: $small-spacing;
    padding-bottom: $small-spacing;
  }

  li {
    margin-bottom: 0px;
    font-variant: small-caps;
    font-size: 0.75rem;
  }
}
.about-author {
  @include span-columns(12);
  position: relative;
  h3 {
    border-bottom: 5px $warm-black solid;
  }
}
.about-author__text-side {
  @include span-columns(5);
  @include media($tablet) {
    h3 {
      text-align: center;
    }
    @include span-columns(12 of 12);
  }
  p {
    margin-bottom: 0px;
  }
}
.about-author__image-side {
  @include span-columns(7);
  @include media($tablet) {
    @include span-columns(12 of 12);
  }
  img.book__author-portrait {
    width: 100%;
  }
}

.built-it-no-one-came h2 {
  @include browser-width-bar($sch1-main-green);
}

.built-it-no-one-came{
  p {
    @include shift(3);
    @include span-columns(7);
    @include media($tablet) {
      @include shift(1);
      @include span-columns(7);
    }
  }
}

.benefits-of-reading__traffic {
  @include span-columns(6);
  @include media($tablet) {
    @include span-columns(10 of 12);
  }
}
.benefits-of-reading__universal-principles {
  @include shift(7);
  @include span-columns(5);
  @include media($tablet) {
    @include shift(2);
    @include span-columns(10 of 12);
  }
}
.benefits-of-reading__dangerous {
  @include span-columns(5);
  @include media($tablet) {
    @include span-columns(10 of 12);
  }
}
.benefits-of-reading__concrete-examples {
  @include shift(7);
  @include span-columns(5);
  @include media($tablet) {
    @include shift(2);
    @include span-columns(10 of 12);
  }
}
.benefits-of-reading__crammed-advice {
  @include span-columns(6);
  @include media($tablet) {
    @include span-columns(10 of 12);
  }
}

.faq {
  p {
    color: $readable-gray;
  }
}

.selectable-objections {
  @include span-columns(6 of 12);
  padding-top: $large-spacing;

  @include media($tablet) {
    @include span-columns(12 of 12);
  }
}
.selectable-objection {
  span {
    @include span-columns(1 of 6);
  }
  h4 {
    @include span-columns(4 of 6);
  };
}

.objection-pointer-arrow {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 14px 0 14px $column;
  border-color: transparent;
  clear: both;
}

.selectable-objection--selected {
  a {
    color: $active-link-color;
  }
  .objection-pointer-arrow {
    border-color: transparent transparent transparent $active-link-color;
  }
}

.objections {
  @include span-columns(12);
}

.objection-answers {
  @include span-columns(6);
  color: $readable-gray;
  height: 600px;
  padding: $small-spacing;
  overflow-y: scroll;
  background: tint($light-gray, 48%);
  box-shadow: 0px 7px 10px;

  @include media($tablet) {
    @include span-columns(12 of 12);
  }
}
.hidden {
  display: none;
}

.unemphasised-text {
  color: $readable-gray;
}

@keyframes pulse {
  0% {
    padding: 0.2em;
    box-shadow: 0 0 0 0 $sch3-complement;
  }

  50% {
    padding: 0.4em;
  }

  99% {
    padding: 0.2em;
    box-shadow: 0 0 0 0.5em transparent;
  }
}

.highlight {
  background-color: tint($entreprenerd-green, 40);
}

.internal-page-nav {
  @include browser-width-bar($sch2-light-blue);

  padding: $small-spacing;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  li {
    flex-grow: 1;
    font-family: $heading-font-family;
    text-transform: uppercase;
  }
  .internal-page-nav-highlight {
    background: white;
    color: black;
    padding: $tiny-spacing;
  }
  a {
    color: white;
    &:hover {
      background-color: white;
      color: $warm-black;
    }
  }
}

.pulse {
  content: '';
  display: inline-block;
  width: 14px;
  height: 14px;
  border-radius: 8px;
  animation: out 2s infinite linear;
  background: $sch3-orange;
  animation-name: pulse;
  cursor: pointer;
}

.checkout-button-container {
  margin-top: $large-spacing;
  position: relative;
  margin-bottom: $large-spacing * 2;
  @include shift(2);
  @include media($tablet) {
    @include shift(0);
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
  }
}

.checkout-button-container form {
  position: absolute;
  left: $large-spacing;
  top: -14px;
  display: inline-block;
}

.book__preview {
  thead {
    text-transform: uppercase;
  }
  tbody tr:nth-child(odd) {
    background-color: $light-gray;
  }
}

.book__pdf_preview_download {
  input {
    background-color: $sch3-complement;
    color: $light-gray;
    padding: 20px;
    box-shadow: 0px 7px 10px $warm-black;
  }
}
.brackets {
}
.for {
  font-size: 70%;
  color: $sch3-orange;
}
.book-title-image {
  img {
    margin-top: $small-spacing;
    max-height: 80px;
    @include media($small-laptop) {
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
  }
  @include span-columns(3 of 12);
  @include media($small-laptop) {
    @include span-columns(12);
    @include omega();
  }
}
.book-title {
  @include span-columns(9 of 12);
  @include omega();
  @include media($small-laptop) {
    @include span-columns(12 of 12);
  }
  h1, h4 {
    text-align: right;
    @include media($small-laptop) {
      text-align: center;
    }
  }
}
.landing-page {
  font-size: modular-scale(1);
  position: relative;
  z-index: 1;
  padding: 0px;
  margin: 0px;

  &:before {
    background-image: image-url('entreprenerd/wave-graph.png');
    content: "";
    opacity: .2;
    z-index: -1;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    position: absolute;
  }
}
.book__topic {
  @include span-columns(4);
  &:nth-of-type(3n) {
    @include omega();
  }
  @include media($tablet) {
    @include span-columns(6 of 12);
    &:nth-of-type(2n) {
      @include omega();
    }
  }
  font-weight: bold;
  position: relative;
  z-index: 1;
  &:before {
    background-image: image-url('entreprenerd/wave-graph.png');
    z-index: -1;
    content: "";
    position:absolute;
    bottom: 0;
    filter: hue-rotate(90deg);
    left: 0;
    width: 100%;
    height: 100%;
    opacity: .2;
  }
  padding: $small-spacing;
  margin-bottom: $small-spacing;
  p {
    text-align: center;
  }
  img {
    @include filter(saturate(70%));
  }
}

